# DSolve-2025

./: .gitignore  README.md  package.json  pnpm-workspace.yaml
server/: Cargo.toml
server/migrations/: 20250326165759_base.sql  20250326224900_keys.sql
server/src/: app_state.rs  jwt.rs  main.rs  middlewares.rs  models.rs  state.rs
server/src/middlewares/: auth.rs  block.rs  blockchain.rs  order_data.rs
server/src/models/: keys.rs  user.rs
server/src/routes/: auth.rs
web/: package.json
web/src/: App.tsx
web/src/components/: hero.tsx  nav.tsx
